# diablo4_paragon_optimizer

./: .gitignore  README.md  __init__.py  build_native.bat  get_schema.bat  optimize_fast.bat  optimize_long.bat  optimize_long_full.bat  update_data.bat  ТЕХ_ЗАДАНИЕ_optimizer_v2.md
crawler/: __init__.py  normalize.py  wowhead_crawler.py
data/normalized/boards/barbarian/: blood_rage.json  bone_breaker.json  carnage.json  decimator.json  flawless_technique.json  force_of_nature.json  hemorrhage.json  starter.json  warbringer.json  weapons_master.json
data/normalized/classes/: barbarian.json  druid.json  necromancer.json  paladin.json  rogue.json  sorcerer.json  spiritborn.json  warlock.json
data/normalized/manifest/: all.json  barbarian.json  druid.json  necromancer.json  paladin.json  rogue.json  sorcerer.json  spiritborn.json  warlock.json
data/raw/: _classes.json  _crawl_all_summary.json
data/raw/barbarian/: wowhead_raw.json
data/raw/druid/: wowhead_raw.json
data/raw/necromancer/: wowhead_raw.json
data/raw/paladin/: wowhead_raw.json
data/raw/rogue/: wowhead_raw.json
data/raw/sorcerer/: wowhead_raw.json
data/raw/spiritborn/: wowhead_raw.json
data/raw/warlock/: wowhead_raw.json
native/: CMakeLists.txt  optimizer_cli.cpp
profiles/: druid.json  paladin_balanced.json  paladin_juggernaut_shield_bash.json  spiritborn.json  warlock_succubus_endgame_weights.json
tests/: test_crawler_parsing.py
weights/: druid.json  paladin_balanced.json  paladin_juggernaut_shield_bash.json  spiritborn.json  warlock_succubus_endgame_weights.json
(+251 files in other folders)
